--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Fetch latest release tag
-        uses: pozetroninc/github-action-get-latest-release@master
+        uses: pozetroninc/github-action-get-latest-release@v0.6.0
         id: latest-tag
         with:
           repository: pi-hole/docker-pi-hole
