--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -40,6 +40,8 @@ jobs:
         uses: pozetroninc/github-action-get-latest-release@v0.6.0
         id: latest-tag
         with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
           repository: pi-hole/docker-pi-hole
           
       - name: Login to DockerHub
