--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -3,7 +3,7 @@ name: Image buid
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
   schedule:
       - cron:  '0 * * * *'
   workflow_dispatch:
