--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -54,7 +54,11 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64
+          platforms: platforms: |
+            linux/arm64
+            linux/amd64
+            linux/arm/v8
+            linux/arm/v7
           push: true
           provenance: false
           tags: |
