--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: platforms: |
+          platforms: |
             linux/arm64
             linux/amd64
             linux/arm/v8
