--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -2,7 +2,7 @@ name: Image buid
 
 on:
   schedule:
-      - cron:  '0 * * * *'
+      - cron:  '0 0,3,6,9,12,15,18,21 * * *'
   workflow_dispatch:
 
 jobs:
