--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,21 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended"
-  ]
+    "config:recommended",
+    ":dependencyDashboard",
+    ":enableVulnerabilityAlertsWithLabel('security')",
+    ":preserveSemverRanges",
+    ":rebaseStalePrs",
+    "group:recommended"
+  ],
+  "labels": [
+    "renovate"
+  ],
+  "ignorePaths": [],
+  "useBaseBranchConfig": "merge",
+  "packageRules": [],
+  "prConcurrentLimit": 30,
+  "prHourlyLimit": 5,
+  "separateMinorPatch": true,
+  "stopUpdatingLabel": "renovate/stop_updating"
 }
