--- a/renovate.json
+++ b/renovate.json
@@ -8,14 +8,25 @@
     ":rebaseStalePrs",
     "group:recommended"
   ],
-  "labels": [
-    "renovate"
-  ],
+  "baseBranches": ["dev"],
+  "labels": ["renovate"],
   "ignorePaths": [],
   "useBaseBranchConfig": "merge",
-  "packageRules": [],
   "prConcurrentLimit": 30,
   "prHourlyLimit": 5,
   "separateMinorPatch": true,
-  "stopUpdatingLabel": "renovate/stop_updating"
+  "stopUpdatingLabel": "renovate/stop_updating",
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "digest"],
+      "automerge": true,
+      "automergeType": "branch",
+      "description": "Automerge minor updates and digest pins on dev"
+    },
+    {
+      "matchDatasources": ["docker"],
+      "groupName": "Docker Image Updates",
+      "description": "Group all docker base image updates into one PR"
+    }
+  ]
 }
